# Optionlab

./: .gitignore  CMakeLists.txt
include/optionlab/: data_parser.hpp
src/: data_parser.cpp  main.cpp
